--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,9 +149,7 @@ jobs:
   ##     - PR added to merge queue
   stacks-core-tests:
     if: |
-      needs.check-release.outputs.is_node_release == 'true' ||
-      needs.check-release.outputs.is_signer_release == 'true' ||
-      github.event_name == 'workflow_dispatch' ||
+      needs.check-release.outputs.is_node_release == 'false' ||
       github.event_name == 'pull_request' ||
       github.event_name == 'merge_group'
     name: Stacks Core Tests
@@ -192,8 +190,7 @@ jobs:
   ##     - PR added to merge queue
   bitcoin-tests:
     if: |
-      needs.check-release.outputs.is_node_release == 'true' ||
-      github.event_name == 'workflow_dispatch' ||
+      needs.check-release.outputs.is_node_release == 'false' ||
       github.event_name == 'pull_request' ||
       github.event_name == 'merge_group'
     name: Bitcoin Tests
@@ -205,8 +202,7 @@ jobs:
 
   p2p-tests:
     if: |
-      needs.check-release.outputs.is_node_release == 'true' ||
-      github.event_name == 'workflow_dispatch' ||
+      needs.check-release.outputs.is_node_release == 'false' ||
       github.event_name == 'pull_request' ||
       github.event_name == 'merge_group'
     name: P2P Tests
@@ -221,7 +217,8 @@ jobs:
   ## Runs when:
   ##   - it is a node release run
   atlas-tests:
-    if: needs.check-release.outputs.is_node_release == 'true'
+    #if: needs.check-release.outputs.is_node_release == 'true'
+    if: ${{ false }}
     name: Atlas Tests
     needs:
       - rustfmt
@@ -230,7 +227,8 @@ jobs:
     uses: ./.github/workflows/atlas-tests.yml
 
   epoch-tests:
-    if: needs.check-release.outputs.is_node_release == 'true'
+    #if: needs.check-release.outputs.is_node_release == 'true'
+    if: ${{ false }}
     name: Epoch Tests
     needs:
       - rustfmt
@@ -239,7 +237,8 @@ jobs:
     uses: ./.github/workflows/epoch-tests.yml
 
   slow-tests:
-    if: needs.check-release.outputs.is_node_release == 'true'
+    #if: needs.check-release.outputs.is_node_release == 'true'
+    if: ${{ false }}
     name: Slow Tests
     needs:
       - rustfmt
