--- a/.github/workflows/stacks-core-tests.yml
+++ b/.github/workflows/stacks-core-tests.yml
@@ -52,7 +52,8 @@ jobs:
       ## Create and upload code coverage file
       - name: Code Coverage
         id: codecov
-        uses: stacks-network/actions/codecov@main
+        #uses: stacks-network/actions/codecov@main
+        uses: wileyj/actions/codecov@fix/codecov
         with:
           test-name: ${{ matrix.test-name }}
 
@@ -109,7 +110,8 @@ jobs:
       ## Upload code coverage file
       - name: Code Coverage
         id: codecov
-        uses: stacks-network/actions/codecov@main
+        #uses: stacks-network/actions/codecov@main
+        uses: wileyj/actions/codecov@fix/codecov
         with:
           # We'd like to uncomment the below line once the codecov upload is working
           # fail_ci_if_error: true
