Adding attestation for docker image from source build

--- a/.github/workflows/image-build-source.yml
+++ b/.github/workflows/image-build-source.yml
@@ -57,6 +57,11 @@ jobs:
       - name: Build and Push ( ${{matrix.dist}} )
         id: docker_build
         uses: docker/build-push-action@ca877d9245402d1537745e0e356eab47c3520991 # v6.13.0
+        permissions:
+          id-token: write
+          contents: read
+          attestations: write
+          packages: write
         with:
           file: ./Dockerfile
           platforms: ${{ env.docker_platforms }}
@@ -67,4 +72,12 @@ jobs:
             GIT_BRANCH=${{ env.GITHUB_REF_SHORT }}
             GIT_COMMIT=${{ env.GITHUB_SHA_SHORT }}
             TARGET_CPU=x86-64-v3
-          push: ${{ env.DOCKER_PUSH }}
+          push: false #${{ env.DOCKER_PUSH }}
+
+      ## Attest docker image
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
+        with:
+          subject-name: ${{ steps.docker_metadata.outputs.tags }}
+          subject-digest: ${{ steps.docker_build.outputs.digest }}
+          push-to-registry: ${{ env.DOCKER_PUSH }}
