--- a/.github/workflows/image-build-source.yml
+++ b/.github/workflows/image-build-source.yml
@@ -72,13 +72,14 @@ jobs:
             GIT_BRANCH=${{ env.GITHUB_REF_SHORT }}
             GIT_COMMIT=${{ env.GITHUB_SHA_SHORT }}
             TARGET_CPU=x86-64-v3
-          push: false #${{ env.DOCKER_PUSH }}
+          push: ${{ env.DOCKER_PUSH }}
 
       ## Attest docker image
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
         with:
-          subject-name: ${{env.docker-org}}/${{ github.event.repository.name }} # ${{ steps.docker_metadata.outputs.tags }}
+          subject-name: |
+            ${{ steps.docker_metadata.outputs.tags }}
           subject-digest: ${{ steps.docker_build.outputs.digest }}
           push-to-registry: ${{ env.DOCKER_PUSH }}
 
