--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -38,9 +38,9 @@ concurrency:
 run-name: ${{ inputs.node_tag || inputs.signer_tag }}
 
 jobs:
-  ## This job's sole purpose is trigger a secondary approval outside of the matrix jobs below. 
+  ## This job's sole purpose is trigger a secondary approval outside of the matrix jobs below.
   ##   - If this job isn't approved to run, then the subsequent jobs will also not run - for this reason, we always exit 0
-  ##   - `andon-cord` requires the repo environment "Build Release", which will trigger a secondary approval step before running this workflow.  
+  ##   - `andon-cord` requires the repo environment "Build Release", which will trigger a secondary approval step before running this workflow.
   andon-cord:
     if: |
       inputs.node_tag != '' ||
@@ -154,6 +154,14 @@ jobs:
           - alpine
           - debian
     steps:
+      ## Setup Docker for the builds
+      - name: Docker setup
+        id: docker_setup
+        uses: stacks-network/actions/docker@main
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Create Docker Image
         uses: wileyj/actions/stacks-core/release/docker-images@chore/attestation
         # uses: stacks-network/actions/stacks-core/release/docker-images@main
