--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -127,54 +127,68 @@ jobs:
           is_signer_release: ${{ inputs.is_signer_release }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  ## Builds arch dependent Docker images from binaries
+  ## Builds arch dependent Docker images from binaries for stacks-node
   ##
   ## Note: this step requires the binaries in the create-release step to be uploaded
   ## Runs when the following is true:
-  ##  - either node or signer tag is provided
-  docker-image:
+  ##  - node_tag is provided and is_node_release is true
+  node-docker-image:
     if: |
-      inputs.node_tag != '' ||
-      inputs.signer_tag != ''
-    name: Docker Image (Binary)
-    runs-on: ubuntu-latest
+      inputs.node_tag != '' &&
+      inputs.is_node_release == 'true'
+    name: Build Node Docker Image
     needs:
       - andon-cord
       - build-binaries
       - create-release
-    permissions:
-      id-token: write
-      attestations: write
-    strategy:
-      fail-fast: false
-      ## Build a maximum of 2 images concurrently based on matrix.dist
-      max-parallel: 2
-      matrix:
-        dist:
-          - alpine
-          - debian
-    steps:
-      ## Setup Docker for the builds
-      - name: Docker setup
-        id: docker_setup
-        uses: stacks-network/actions/docker@main
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    # strategy:
+    #   fail-fast: false
+    #   ## Build a maximum of 2 images concurrently based on matrix.dist
+    #   max-parallel: 2
+    #   matrix:
+    #     dist:
+    #       - alpine
+    #       - debian
+    secrets: inherit
+    uses: ./.github/workflows/image-build-binary.yml
+    with:
+      tag: ${{ inputs.node_tag }}
+      docker_tag: ${{ inputs.node_docker_tag }}
+      # dist: ${{ matrix.dist }}
+    # with:
+    #   node_tag: ${{ inputs.node_tag }}
+    #   node_docker_tag: ${{ inputs.node_docker_tag }}
+    #   signer_tag: ${{ inputs.signer_tag }}
+    #   signer_docker_tag: ${{ inputs.signer_docker_tag }}
+    #   is_node_release: ${{ inputs.is_node_release }}
+    #   is_signer_release: ${{ inputs.is_signer_release }}
 
-      - name: Create Docker Image
-        uses: wileyj/actions/stacks-core/release/docker-images@chore/attestation
-        # uses: stacks-network/actions/stacks-core/release/docker-images@main
-        with:
-          node_tag: ${{ inputs.node_tag }}
-          node_docker_tag: ${{ inputs.node_docker_tag }}
-          signer_tag: ${{ inputs.signer_tag }}
-          signer_docker_tag: ${{ inputs.signer_docker_tag }}
-          is_node_release: ${{ inputs.is_node_release }}
-          is_signer_release: ${{ inputs.is_signer_release }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-          dist: ${{ matrix.dist }}
+  ## Note: this step requires the binaries in the create-release step to be uploaded
+  ## Runs when the following is true:
+  ##  - signer_tag is provided and is_signer_release is true
+  signer-docker-image:
+    if: |
+      inputs.signer_tag != '' &&
+      inputs.is_signer_release == 'true'
+    name: Build Signer Docker Image
+    needs:
+      - andon-cord
+      - build-binaries
+      - create-release
+    # strategy:
+    #   fail-fast: false
+    #   ## Build a maximum of 2 images concurrently based on matrix.dist
+    #   max-parallel: 2
+    #   matrix:
+    #     dist:
+    #       - alpine
+    #       - debian
+    secrets: inherit
+    uses: ./.github/workflows/image-build-binary.yml
+    with:
+      tag: ${{ inputs.signer_tag }}
+      docker_tag: ${{ inputs.signer_docker_tag }}
+      # dist: ${{ matrix.dist }}
 
   ## Create the downstream PR for the release branch to master,develop
   create-pr:
@@ -182,19 +196,21 @@ jobs:
       (
         inputs.node_tag != '' ||
         inputs.signer_tag != ''
-      )
+      ) && 
+      ${{ !failure() }}
     name: Create Downstream PR (${{ github.ref_name }})
     runs-on: ubuntu-latest
     needs:
       - andon-cord
       - build-binaries
       - create-release
-      - docker-image
+      - node-docker-image
+      - signer-docker-image
     permissions:
       pull-requests: write
     steps:
       - name: Open Downstream PR
         id: create-pr
-        uses: stacks-network/actions/stacks-core/release/downstream-pr@main
+        uses: wileyj/actions/stacks-core/release/downstream-pr@chore/update_ci
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
