--- a/.github/workflows/image-build-binary.yml
+++ b/.github/workflows/image-build-binary.yml
@@ -39,7 +39,7 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     ## Requires the repo environment "Push to Docker", which will trigger a secondary approval step before running this workflow.
-    # environment: "Push to Docker"
+    environment: "Push to Docker"
     permissions:
       id-token: write
       attestations: write
