--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -54,6 +54,15 @@ jobs:
         id: check
         run: |
           exit 0
+
+      ## Login to dockerhub
+      - name: Login to DockerHub
+        id: docker_login
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
   # ## Build arch dependent binaries from source
   # ##
   # ## Runs when the following is true:
@@ -127,97 +136,3 @@ jobs:
   #         is_node_release: ${{ inputs.is_node_release }}
   #         is_signer_release: ${{ inputs.is_signer_release }}
   #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  ## Builds arch dependent Docker images from binaries for stacks-node
-  ##
-  ## Note: this step requires the binaries in the create-release step to be uploaded
-  ## Runs when the following is true:
-  ##  - node_tag is provided and is_node_release is true
-  node-docker-image:
-    if: |
-      inputs.node_tag != '' &&
-      inputs.is_node_release == 'true'
-    name: Build Node Docker Image
-    needs:
-      - andon-cord
-      # - build-binaries
-      # - create-release
-    # strategy:
-    #   fail-fast: false
-    #   ## Build a maximum of 2 images concurrently based on matrix.dist
-    #   max-parallel: 2
-    #   matrix:
-    #     dist:
-    #       - alpine
-    #       - debian
-    # secrets: inherit
-    uses: ./.github/workflows/image-build-binary.yml
-    with:
-      tag: ${{ inputs.node_tag }}
-      docker_tag: ${{ inputs.node_docker_tag }}
-      name: stacks-node
-    secrets:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      # dist: ${{ matrix.dist }}
-    # with:
-    #   node_tag: ${{ inputs.node_tag }}
-    #   node_docker_tag: ${{ inputs.node_docker_tag }}
-    #   signer_tag: ${{ inputs.signer_tag }}
-    #   signer_docker_tag: ${{ inputs.signer_docker_tag }}
-    #   is_node_release: ${{ inputs.is_node_release }}
-    #   is_signer_release: ${{ inputs.is_signer_release }}
-
-  ## Note: this step requires the binaries in the create-release step to be uploaded
-  ## Runs when the following is true:
-  ##  - signer_tag is provided and is_signer_release is true
-  signer-docker-image:
-    if: |
-      inputs.signer_tag != '' &&
-      inputs.is_signer_release == 'true'
-    name: Build Signer Docker Image
-    needs:
-      - andon-cord
-      # - build-binaries
-      # - create-release
-    # strategy:
-    #   fail-fast: false
-    #   ## Build a maximum of 2 images concurrently based on matrix.dist
-    #   max-parallel: 2
-    #   matrix:
-    #     dist:
-    #       - alpine
-    #       - debian
-    uses: ./.github/workflows/image-build-binary.yml
-    with:
-      tag: ${{ inputs.signer_tag }}
-      docker_tag: ${{ inputs.signer_docker_tag }}
-      name: signer
-    secrets:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      # dist: ${{ matrix.dist }}
-
-  # ## Create the downstream PR for the release branch to master,develop
-  # create-pr:
-  #   if: |
-  #     (
-  #       inputs.node_tag != '' ||
-  #       inputs.signer_tag != ''
-  #     )
-  #   name: Create Downstream PR (${{ github.ref_name }})
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - andon-cord
-  #     - build-binaries
-  #     - create-release
-  #     - node-docker-image
-  #     - signer-docker-image
-  #   permissions:
-  #     pull-requests: write
-  #   steps:
-  #     - name: Open Downstream PR
-  #       id: create-pr
-  #       uses: wileyj/actions/stacks-core/release/downstream-pr@chore/update_ci
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
