--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -47,27 +47,12 @@ jobs:
       inputs.signer_tag != ''
     name: Andon Cord
     runs-on: ubuntu-latest
-    ## Requires the repo environment "Push to Docker", which will trigger a secondary approval step before running this workflow.
-    environment: "Push to Docker"
-    permissions:
-      id-token: write
-      attestations: write
+    environment: "Build Release"
     steps:
-      ## echo
-      - name: echo
-        id: echo
-        shell: bash
+      - name: Check Approval
+        id: check
         run: |
-          echo "DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}"
-
-      ## Login to dockerhub
-      - name: Login to DockerHub
-        id: docker_login
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
+          exit 0
   # ## Build arch dependent binaries from source
   # ##
   # ## Runs when the following is true:
@@ -80,9 +65,6 @@ jobs:
   #   runs-on: ubuntu-latest
   #   needs:
   #     - andon-cord
-  #   permissions:
-  #     id-token: write
-  #     attestations: write
   #   strategy:
   #     ## Run a maximum of 10 builds concurrently, using the matrix defined in inputs.arch
   #     max-parallel: 10
@@ -141,3 +123,63 @@ jobs:
   #         is_node_release: ${{ inputs.is_node_release }}
   #         is_signer_release: ${{ inputs.is_signer_release }}
   #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  ## Builds arch dependent Docker images from binaries
+  ##
+  ## Note: this step requires the binaries in the create-release step to be uploaded
+  ## Runs when the following is true:
+  ##  - either node or signer tag is provided
+  docker-image:
+    if: |
+      inputs.node_tag != '' ||
+      inputs.signer_tag != ''
+    name: Docker Image (Binary)
+    runs-on: ubuntu-latest
+    needs:
+      - andon-cord
+      - build-binaries
+      - create-release
+    strategy:
+      fail-fast: false
+      ## Build a maximum of 2 images concurrently based on matrix.dist
+      max-parallel: 2
+      matrix:
+        dist:
+          - alpine
+          - debian
+    steps:
+      - name: Create Docker Image
+        uses: wileyj/actions/stacks-core/release/docker-images@chore/attestation
+        with:
+          node_tag: ${{ inputs.node_tag }}
+          node_docker_tag: ${{ inputs.node_docker_tag }}
+          signer_tag: ${{ inputs.signer_tag }}
+          signer_docker_tag: ${{ inputs.signer_docker_tag }}
+          is_node_release: ${{ inputs.is_node_release }}
+          is_signer_release: ${{ inputs.is_signer_release }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          dist: ${{ matrix.dist }}
+
+  ## Create the downstream PR for the release branch to master,develop
+  create-pr:
+    if: |
+      (
+        inputs.node_tag != '' ||
+        inputs.signer_tag != ''
+      )
+    name: Create Downstream PR (${{ github.ref_name }})
+    runs-on: ubuntu-latest
+    needs:
+      - andon-cord
+      - build-binaries
+      - create-release
+      - docker-image
+    permissions:
+      pull-requests: write
+    steps:
+      - name: Open Downstream PR
+        id: create-pr
+        uses: stacks-network/actions/stacks-core/release/downstream-pr@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
