--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -137,8 +137,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - andon-cord
-      - build-binaries
-      - create-release
+      # - build-binaries
+      # - create-release
     strategy:
       fail-fast: false
       ## Build a maximum of 2 images concurrently based on matrix.dist
@@ -172,8 +172,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - andon-cord
-      - build-binaries
-      - create-release
+      # - build-binaries
+      # - create-release
       - docker-image
     permissions:
       pull-requests: write
