--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -53,76 +53,76 @@ jobs:
         id: check
         run: |
           exit 0
-  # ## Build arch dependent binaries from source
-  # ##
-  # ## Runs when the following is true:
-  # ##  - either node or signer tag is provided
-  # build-binaries:
-  #   if: |
-  #     inputs.node_tag != '' ||
-  #     inputs.signer_tag != ''
-  #   name: Build Binaries
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - andon-cord
-  #   strategy:
-  #     ## Run a maximum of 10 builds concurrently, using the matrix defined in inputs.arch
-  #     max-parallel: 10
-  #     matrix:
-  #       arch:
-  #         - linux-musl
-  #         - linux-glibc
-  #         - macos
-  #         - windows
-  #       cpu:
-  #         - arm64
-  #         - x86-64 ## defaults to x86-64-v3 variant - intel haswell (2013) and newer
-  #         # - x86-64-v2 ## intel nehalem (2008) and newer
-  #         # - x86-64-v3 ## intel haswell (2013) and newer
-  #         # - x86-64-v4 ## intel skylake (2017) and newer
-  #       exclude:
-  #         - arch: windows # excludes windows-arm64
-  #           cpu: arm64
-  #         - arch: windows # excludes windows-armv7
-  #           cpu: armv7
-  #         - arch: macos # excludes macos-armv7
-  #           cpu: armv7
-  #   steps:
-  #     - name: Build Binary (${{ matrix.arch }}_${{ matrix.cpu }})
-  #       uses: wileyj/actions/stacks-core/release/create-source-binary@chore/attestation
-  #       with:
-  #         arch: ${{ matrix.arch }}
-  #         cpu: ${{ matrix.cpu }}
-  #         node_tag: ${{ inputs.node_tag }}
-  #         signer_tag: ${{ inputs.signer_tag }}
-  #         signer_docker_tag: ${{ inputs.signer_docker_tag }}
-  #         is_node_release: ${{ inputs.is_node_release }}
+  ## Build arch dependent binaries from source
+  ##
+  ## Runs when the following is true:
+  ##  - either node or signer tag is provided
+  build-binaries:
+    if: |
+      inputs.node_tag != '' ||
+      inputs.signer_tag != ''
+    name: Build Binaries
+    runs-on: ubuntu-latest
+    needs:
+      - andon-cord
+    strategy:
+      ## Run a maximum of 10 builds concurrently, using the matrix defined in inputs.arch
+      max-parallel: 10
+      matrix:
+        arch:
+          - linux-musl
+          - linux-glibc
+          - macos
+          - windows
+        cpu:
+          - arm64
+          - x86-64 ## defaults to x86-64-v3 variant - intel haswell (2013) and newer
+          # - x86-64-v2 ## intel nehalem (2008) and newer
+          # - x86-64-v3 ## intel haswell (2013) and newer
+          # - x86-64-v4 ## intel skylake (2017) and newer
+        exclude:
+          - arch: windows # excludes windows-arm64
+            cpu: arm64
+          - arch: windows # excludes windows-armv7
+            cpu: armv7
+          - arch: macos # excludes macos-armv7
+            cpu: armv7
+    steps:
+      - name: Build Binary (${{ matrix.arch }}_${{ matrix.cpu }})
+        uses: wileyj/actions/stacks-core/release/create-source-binary@chore/attestation
+        with:
+          arch: ${{ matrix.arch }}
+          cpu: ${{ matrix.cpu }}
+          node_tag: ${{ inputs.node_tag }}
+          signer_tag: ${{ inputs.signer_tag }}
+          signer_docker_tag: ${{ inputs.signer_docker_tag }}
+          is_node_release: ${{ inputs.is_node_release }}
 
-  # ## Runs when the following is true:
-  # ##  - either node or signer tag is provided
-  # create-release:
-  #   if: |
-  #     inputs.node_tag != '' ||
-  #     inputs.signer_tag != ''
-  #   name: Create Release
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - andon-cord
-  #     - build-binaries
-  #   permissions:
-  #     contents: write
-  #   steps:
-  #     ## Creates releases
-  #     - name: Create Release
-  #       uses: stacks-network/actions/stacks-core/release/create-releases@main
-  #       with:
-  #         node_tag: ${{ inputs.node_tag }}
-  #         node_docker_tag: ${{ inputs.node_docker_tag }}
-  #         signer_tag: ${{ inputs.signer_tag }}
-  #         signer_docker_tag: ${{ inputs.signer_docker_tag }}
-  #         is_node_release: ${{ inputs.is_node_release }}
-  #         is_signer_release: ${{ inputs.is_signer_release }}
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  ## Runs when the following is true:
+  ##  - either node or signer tag is provided
+  create-release:
+    if: |
+      inputs.node_tag != '' ||
+      inputs.signer_tag != ''
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs:
+      - andon-cord
+      - build-binaries
+    permissions:
+      contents: write
+    steps:
+      ## Creates releases
+      - name: Create Release
+        uses: stacks-network/actions/stacks-core/release/create-releases@main
+        with:
+          node_tag: ${{ inputs.node_tag }}
+          node_docker_tag: ${{ inputs.node_docker_tag }}
+          signer_tag: ${{ inputs.signer_tag }}
+          signer_docker_tag: ${{ inputs.signer_docker_tag }}
+          is_node_release: ${{ inputs.is_node_release }}
+          is_signer_release: ${{ inputs.is_signer_release }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   ## Builds arch dependent Docker images from binaries
   ##
@@ -141,8 +141,8 @@ jobs:
       attestations: write
     needs:
       - andon-cord
-      # - build-binaries
-      # - create-release
+      - build-binaries
+      - create-release
     strategy:
       fail-fast: false
       ## Build a maximum of 2 images concurrently based on matrix.dist
@@ -176,8 +176,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - andon-cord
-      # - build-binaries
-      # - create-release
+      - build-binaries
+      - create-release
       - docker-image
     permissions:
       pull-requests: write
