--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -30,6 +30,10 @@ on:
         required: true
         type: string
 
+## Define which docker arch to build for
+env:
+  DOWNSTREAM_PR_APP_ID: "1224905"
+
 concurrency:
   group: github-release-${{ github.head_ref || github.ref }}
   ## Always cancel duplicate jobs
@@ -52,8 +56,25 @@ jobs:
       checks: write
       contents: read
     steps:
+      - name: Generate token
+        id: generate-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ vars.DOWNSTREAM_PR_APP_ID }}
+          private-key: ${{ secrets.DOWNSTREAM_PR_PRIVATE_KEY }}
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.generate-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+      # - run: |
+      #     git config --global user.name '${{ steps.generate-token.outputs.app-slug }}[bot]'
+      #     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com'
       - name: Open Downstream PR
         id: create-pr
         uses: wileyj/actions/stacks-core/release/downstream-pr@chore/run_pr_workflow
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          check_api: ${{ steps.generate-token.outputs.token }}
+          user-name: "${{ steps.generate-token.outputs.app-slug }}[bot]"
+          user-email: "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
