--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -74,6 +74,7 @@ jobs:
         id: create-pr
         uses: wileyj/actions/stacks-core/release/downstream-pr@chore/run_pr_workflow
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
           user-name: "${{ steps.generate-token.outputs.app-slug }}[bot]"
           user-email: "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
