--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-      contents: read
+      contents: write
       checks: write
     steps:
       - name: Generate token
