--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -54,6 +54,12 @@ jobs:
     permissions:
       pull-requests: write
     steps:
+      - name: Checkout the latest code
+        id: git_checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+          ref: ${{ github.ref_name }}
       - name: Generate token
         id: generate-token
         uses: actions/create-github-app-token@v1
