--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -74,20 +74,21 @@ jobs:
       # # - run: |
       # #     git config --global user.name '${{ steps.generate-token.outputs.app-slug }}[bot]'
       # #     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com'
-      - name: Create PR
-        env:
-          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
-        run: |
-          gh pr create \
-            --head "${{ github.ref_name }}" \
-            --base "develop" \
-            --title "Test PR" \
-            --body "Test PR"
+      # - name: Create PR
+      #   env:
+      #     GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+      #   run: |
+      #     gh pr create \
+      #       --head "${{ github.ref_name }}" \
+      #       --base "develop" \
+      #       --title "Test PR" \
+      #       --body "Test PR"
       - name: Open Downstream PR
         id: create-pr
         uses: wileyj/actions/stacks-core/release/downstream-pr@chore/run_pr_workflow
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.generate-token.outputs.token }}
+          # token: ${{ secrets.GITHUB_TOKEN }}
           # app_token: ${{ steps.generate-token.outputs.token }}
           # user-name: "${{ steps.generate-token.outputs.app-slug }}[bot]"
           # user-email: "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
