--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -83,12 +83,23 @@ jobs:
       #       --base "develop" \
       #       --title "Test PR" \
       #       --body "Test PR"
-      - name: Open Downstream PR
-        id: create-pr
-        uses: wileyj/actions/stacks-core/release/downstream-pr@chore/run_pr_workflow
-        with:
-          token: ${{ steps.generate-token.outputs.token }}
-          # token: ${{ secrets.GITHUB_TOKEN }}
-          # app_token: ${{ steps.generate-token.outputs.token }}
-          # user-name: "${{ steps.generate-token.outputs.app-slug }}[bot]"
-          # user-email: "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
+      - name: Approve PR
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+        run: |
+          gh pr review 220 -a
+      - name: Merge PR
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+        run: |
+          gh pr merge 220 -m
+
+      # - name: Open Downstream PR
+      #   id: create-pr
+      #   uses: wileyj/actions/stacks-core/release/downstream-pr@chore/run_pr_workflow
+      #   with:
+      #     token: ${{ steps.generate-token.outputs.token }}
+      #     # token: ${{ secrets.GITHUB_TOKEN }}
+      #     # app_token: ${{ steps.generate-token.outputs.token }}
+      #     # user-name: "${{ steps.generate-token.outputs.app-slug }}[bot]"
+      #     # user-email: "${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com"
