--- a/.github/workflows/core-build-tests.yml
+++ b/.github/workflows/core-build-tests.yml
@@ -4,7 +4,8 @@ name: Core build tests
 #   - PRs are (re)opened against develop branch
 on:
   workflow_call:
-
+  workflow_dispatch:
+  
 jobs:
   check-consts:
     name: Check the constants from stacks-inspect
