--- a/.github/workflows/bitcoin-tests.yml
+++ b/.github/workflows/bitcoin-tests.yml
@@ -27,7 +27,8 @@ jobs:
       ## Setup test environment
       - name: Setup Test Environment
         id: setup_tests
-        uses: stacks-network/actions/stacks-core/testenv@main
+        uses: stacks-network/actions/stacks-core/testenv@chore/6107
+        # uses: stacks-network/actions/stacks-core/testenv@main
         with:
           btc-version: "25.0"
       - name: Generate tests JSON
@@ -118,7 +119,8 @@ jobs:
       ## Setup test environment
       - name: Setup Test Environment
         id: setup_tests
-        uses: stacks-network/actions/stacks-core/testenv@main
+        uses: stacks-network/actions/stacks-core/testenv@chore/6107
+        # uses: stacks-network/actions/stacks-core/testenv@main
         with:
           btc-version: "25.0"
 
