--- a/.github/workflows/p2p-tests.yml
+++ b/.github/workflows/p2p-tests.yml
@@ -51,7 +51,8 @@ jobs:
       ## Setup test environment
       - name: Setup Test Environment
         id: setup_tests
-        uses: stacks-network/actions/stacks-core/testenv@main
+        uses: stacks-network/actions/stacks-core/testenv@chore/6107
+        # uses: stacks-network/actions/stacks-core/testenv@main
         with:
           btc-version: "25.0"
 
@@ -65,7 +66,8 @@ jobs:
       - name: Run Tests
         id: run_tests
         timeout-minutes: ${{ fromJSON(env.TEST_TIMEOUT) }}
-        uses: stacks-network/actions/stacks-core/run-tests@main
+        uses: stacks-network/actions/stacks-core/run-tests@chore/6107
+        # uses: stacks-network/actions/stacks-core/run-tests@main
         with:
           test-name: ${{ matrix.test-name }}
           threads: 1
